--- a/v0.1/Makefile
+++ b/v0.1/Makefile
@@ -5,8 +5,8 @@
 #                                                     +:+ +:+         +:+      #
 #    By: kboddez <marvin@42.fr>                     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2016/05/09 12:57:20 by kboddez           #+#    #+#              #
-#    Updated: 2016/11/15 09:25:28 by kboddez          ###   ########.fr        #
+#    Created: 2016/11/16 17:49:55 by kboddez           #+#    #+#              #
+#    Updated: 2016/11/16 17:50:17 by kboddez          ###   ########.fr        #
 #                                                                              #
 #******************************************************************************#
 
@@ -17,7 +17,9 @@ LIB = libfdf.a
 MAIN = main.c
 
 SRC_NAME =  $(MAIN) start.c map.c initialisation.c algo.c \
-	echap.c press.c release_key.c put_pixel.c
+	echap.c press.c release_key.c put_pixel.c music.c movement.c \
+	complete_map.c
+
 
 GREEN = \033[33;32m
 YELLOW = \033[33;33m
